# fastapi-langgraph-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.jinja  Makefile  README.md  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja  server.py  server.py.jinja
.github/workflows/: cd.yaml.template.jinja  ci.yaml  ci.yaml.jinja
queries/ddl/: create_schema.sql
scripts/: initialize_db.py
src/app/api/: dependencies.py  lifespan.py
src/app/api/routers/: chat.py  health.py
src/app/config/: database.py.jinja  settings.py
src/app/db/: __init__.py  pool.py  query_store.py
src/app/graphs/base/: builder.py
src/app/graphs/chat/: state.py
src/app/graphs/chat/nodes/: llm.py  tool.py
src/app/models/api/requests/: __init__.py  chat.py
src/app/models/api/responses/: __init__.py  chat.py
src/app/tools/: __init__.py  base.py  handler.py  placeholder.py
